2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-dbus.c (ephy_dbus_connect_to_session_bus) 

	Fix the arguments to the dbus_connection_set_exit_on_disconnect call
	for the session bus.

2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-dbus.c (ephy_dbus_connect_to_session_bus) 

	Tell dbus not to exit the application if the bus disconnects.

2006-01-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:

	Remove unneeded LINK line.

2006-01-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/Makefile.am:
	* embed/mozilla/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Don't include generated files in the tarball. Bug #319440.

	R help/C/Makefile.am:
	R help/es/Makefile.am:
	R help/eu/Makefile.am:
	R help/fi/Makefile.am:
	R help/ja/Makefile.am:
	R help/uk/Makefile.am:

	Remove obsolete files.

2006-01-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):

	Fix compilation with DBUS 0.6 (DBUS_NAME_FLAG_PROHIBIT_REPLACEMENT constant removed).

2006-01-02  Christian Persch  <chpe@cvs.gnome.org>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	R data/GNOME_Epiphany_Automation.server.in:
	* data/Makefile.am:
	A data/epiphany-service.xml:
	A data/org.gnome.Epiphany.service.in:
	* doc/reference/Makefile.am:
	R idl/.cvsignore:
	R idl/EphyAutomation.idl:
	R idl/Makefile.am:
	* lib/Makefile.am:
	R lib/ephy-dbus.c:
	R lib/ephy-dbus.h:
	* lib/ephy-file-helpers.c: (ephy_file_launch_application):
	* src/Makefile.am:
	A src/ephy-activation.c:
	A src/ephy-activation.h:
	A src/ephy-dbus.c:
	A src/ephy-dbus.h:
	* src/ephy-main.c: (main):
	* src/ephy-shell.c: (ephy_shell_init), (open_urls),
	(dbus_g_proxy_finalized_cb), (ephy_shell_startup),
	(ephy_shell_dispose):

	Bonobo is dead; long live the Bonobos!
	Patch by Gustavo Gama, bug #322463.

2006-01-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
