@@ -1,5 +1,11 @@
 2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>
 
+	* src/Makefile.am:
+
+	Fix some white space issues to keep make and emacs happy
+
+2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>
+
 	* src/ephy-dbus.c (ephy_dbus_connect_to_session_bus) 
 
 	Fix the arguments to the dbus_connection_set_exit_on_disconnect call
